Bug 78658 - Other: Corrupt: File is getting corrupt after RT because of drawing objects into a text box
Summary: Other: Corrupt: File is getting corrupt after RT because of drawing objects i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Dinesh
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-13 12:45 UTC by Dinesh
Modified: 2014-05-20 14:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File contain object within text box (410.74 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-13 12:45 UTC, Dinesh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-05-13 12:45:52 UTC
Created attachment 98975 [details]
File contain object within text box

Problem description: 
File is getting corrupted after RT because of drawing objects into a text box, callout, comment, footnote, or endnote

Steps to reproduce:
1. Open and save the docx file in LO
2. Open the saved docx file in MSO

Current behavior:
File is not getting opened in MSO

Expected behavior:
File should open in MSO without error
              
Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Jorendc 2014-05-16 16:05:43 UTC
Repro, Version: 4.3.0.0.alpha1+
Build ID: cc4a3f1a88afff114311bddf462ca4bc00a485c7
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-05-12_09:05:53

Kind regards,
Joren
Comment 2 Commit Notification 2014-05-20 09:34:13 UTC
Dinesh Patil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=df973e6e950591c0c36f2bbbb761e43ec23b9964

fdo#78658 Corruption: lockedCanvas tag is missing from RT file



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.