fdo#78658 Corruption: lockedCanvas tag is missing from RT file

While export, locked Canvas is missing and drawing is
exported inside textbox. However a locked Canvas has to be exported
inside a text-box and drawing should fall under locked Canvas
for the RT file to work in MS Office 2010.

Reviewed on:
	https://gerrit.libreoffice.org/9377

Change-Id: Iea2c411302b552db18527001cc4c6d0290085afe